overflow issue fixed..

--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ h1 {
 	padding: 2%;
 	border-radius: 10px;
 	font-size: 16px;
+	overflow: hidden;
 }
 
 #blogBox{
